<?xml version="1.0" encoding="utf-8"?>
<resources>
        <string name="app_name">SportsField</string>
        <string name="orderdate">预约日期：</string>
        <string name="ordertime">预约时间：</string>
        <string name="startapply">预约燃烧卡路里</string>
        <string name="sportsOrder">运动订单</string>
        <string name="reset">重选时间</string>
        <string name="applyerName">姓名</string>
        <string name="applyerID">学号</string>
        <string name="applyNum">人数</string>
        <string name="applyTime">时间</string>
        <string name="fieldId">场地号</string>
        <string name="bat">借球拍（个）</string>
        <string name="ball">羽毛球（个）</string>
        <string name="orderCode">运动订单二维码</string>
        <string name="payway">支付方式</string>
        <string name="payOrder">确认支付</string>
        <string name="pay">去支付</string>

        <string-array name="hour">
            <item>09</item>
            <item>10</item>
            <item>11</item>
            <item>12</item>
            <item>13</item>
            <item>14</item>
            <item>15</item>
            <item>16</item>
            <item>17</item>
            <item>18</item>
            <item>19</item>
            <item>20</item>
            <item>21</item>
            <item>22</item>
        </string-array>
        <string-array name="minute">
            <item>00</item>
            <item>01</item>
            <item>02</item>
            <item>03</item>
            <item>04</item>
            <item>05</item>
            <item>06</item>
            <item>07</item>
            <item>08</item>
            <item>09</item>
            <item>10</item>
            <item>11</item>
            <item>12</item>
            <item>13</item>
            <item>14</item>
            <item>15</item>
            <item>16</item>
            <item>17</item>
            <item>18</item>
            <item>19</item>
            <item>20</item>
            <item>21</item>
            <item>22</item>
            <item>23</item>
            <item>24</item>
            <item>25</item>
            <item>26</item>
            <item>27</item>
            <item>28</item>
            <item>29</item>
            <item>30</item>
            <item>31</item>
            <item>32</item>
            <item>33</item>
            <item>34</item>
            <item>35</item>
            <item>36</item>
            <item>37</item>
            <item>38</item>
            <item>39</item>
            <item>40</item>
            <item>41</item>
            <item>42</item>
            <item>43</item>
            <item>44</item>
            <item>45</item>
            <item>46</item>
            <item>47</item>
            <item>48</item>
            <item>49</item>
            <item>50</item>
            <item>51</item>
            <item>52</item>
            <item>53</item>
            <item>54</item>
            <item>55</item>
            <item>56</item>
            <item>57</item>
            <item>58</item>
            <item>59</item>
            <item>60</item>
        </string-array>







        <!-- TODO: Remove or change this placeholder text -->



        <string name="hello_blank_fragment">Hello blank fragment</string>



</resources>