<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Swimming">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/swim"
            android:layout_width="match_parent"
            android:layout_height="281dp"
            android:src="@drawable/swimming" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/swimnameicon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/name"/>
        <TextView
            android:id="@+id/swimName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/applyerName"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="18sp"/>
        <EditText
            android:id="@+id/edswimName"
            android:layout_width="150dp"
            android:layout_height="wrap_content" /></LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/swimIDicon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/id"/>
            <TextView
                android:id="@+id/swimID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/applyerID"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="18sp"/>
            <EditText
                android:id="@+id/edswimID"
                android:layout_width="150dp"
                android:layout_height="wrap_content" /></LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/swimnumicon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/youyong"/>
            <TextView
                android:id="@+id/swimNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/applyNum"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="18sp"/>
            <EditText
                android:id="@+id/edswimNum"
                android:layout_width="150dp"
                android:layout_height="wrap_content" /></LinearLayout>
            <Button
                android:id="@+id/swimOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/pay"/>

    </LinearLayout>


</FrameLayout>