<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tennis">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <Button
                android:id="@+id/ONE"
                android:layout_width="70dp"
                android:layout_height="90dp"
                android:backgroundTint="@drawable/btn_color"
                android:text="1"/>
            <Button
                android:id="@+id/TWO"
                android:layout_width="70dp"
                android:layout_height="90dp"
                android:backgroundTint="@drawable/btn_color"
                android:text="2"/>
            <Button
                android:id="@+id/THREE"
                android:layout_width="70dp"
                android:layout_height="90dp"
                android:backgroundTint="@drawable/btn_color"
                android:text="3"/>
            <Button
                android:id="@+id/FOUR"
                android:layout_width="70dp"
                android:layout_height="90dp"
                android:backgroundTint="@drawable/btn_color"
                android:text="4"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <Button
                android:id="@+id/FIVE"
                android:layout_width="70dp"
                android:layout_height="90dp"
                android:backgroundTint="@drawable/btn_color"
                android:text="5"/>
            <Button
                android:id="@+id/SIX"
                android:layout_width="70dp"
                android:layout_height="90dp"
                android:backgroundTint="@drawable/btn_color"
                android:text="6"/>
            <Button
                android:id="@+id/SEVEN"
                android:layout_width="70dp"
                android:layout_height="90dp"
                android:backgroundTint="@drawable/btn_color"
                android:text="7"/>
            <Button
                android:id="@+id/EIGHT"
                android:layout_width="70dp"
                android:layout_height="90dp"
                android:backgroundTint="@drawable/btn_color"
                android:text="8"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tenName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/applyerName"/>
            <EditText
                android:id="@+id/edtenName"
                android:layout_width="150dp"
                android:layout_height="wrap_content" /></LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tenID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/applyerID"/>
            <EditText
                android:id="@+id/edtenID"
                android:layout_width="150dp"
                android:layout_height="wrap_content" /></LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tenNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/applyNum"/>
            <EditText
                android:id="@+id/edtenNum"
                android:layout_width="150dp"
                android:layout_height="wrap_content" /></LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tenTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/applyTime"/>
            <TextView
                android:id="@+id/showtenTime"
                android:layout_width="300dp"
                android:layout_height="30dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tenfieldID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fieldId"/>
            <TextView
                android:id="@+id/showtenfieldID"
                android:layout_width="100dp"
                android:layout_height="30dp" /></LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="right">

            <Button
                android:id="@+id/tennisOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pay"/>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>