<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Badminton">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <Button
            android:id="@+id/one"
            android:layout_width="60dp"
            android:layout_height="70dp"
            android:backgroundTint="@drawable/btn_color"
            android:text="1" />
        <Button
            android:id="@+id/two"
            android:layout_width="60dp"
            android:layout_height="70dp"
            android:backgroundTint="@drawable/btn_color"
            android:text="2"/>
        <Button
            android:id="@+id/three"
            android:layout_width="60dp"
            android:layout_height="70dp"
            android:backgroundTint="@drawable/btn_color"
            android:text="3"/>
        <Button
            android:id="@+id/four"
            android:layout_width="60dp"
            android:layout_height="70dp"
            android:backgroundTint="@drawable/btn_color"
            android:text="4"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <Button
            android:id="@+id/five"
            android:layout_width="60dp"
            android:layout_height="70dp"
            android:backgroundTint="@drawable/btn_color"
            android:text="5"/>
        <Button
            android:id="@+id/six"
            android:layout_width="60dp"
            android:layout_height="70dp"
            android:backgroundTint="@drawable/btn_color"
            android:text="6"/>
        <Button
            android:id="@+id/seven"
            android:layout_width="60dp"
            android:layout_height="70dp"
            android:backgroundTint="@drawable/btn_color"
            android:text="7"/>
        <Button
            android:id="@+id/eight"
            android:layout_width="60dp"
            android:layout_height="70dp"
            android:backgroundTint="@drawable/btn_color"
            android:text="8"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <Button
            android:id="@+id/nine"
            android:layout_width="60dp"
            android:layout_height="70dp"
            android:backgroundTint="@drawable/btn_color"
            android:text="9"/>
        <Button
            android:id="@+id/ten"
            android:layout_width="60dp"
            android:layout_height="70dp"
            android:backgroundTint="@drawable/btn_color"
            android:text="10"/>
        <Button
            android:id="@+id/eleven"
            android:layout_width="60dp"
            android:layout_height="70dp"
            android:backgroundTint="@drawable/btn_color"
            android:text="11"/>
        <Button
            android:id="@+id/twelve"
            android:layout_width="60dp"
            android:layout_height="70dp"
            android:backgroundTint="@drawable/btn_color"
            android:text="12"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/badnameicon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/name"/>
        <TextView
            android:id="@+id/badName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/applyerName"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="18sp"/>
        <EditText
            android:id="@+id/edbadName"
            android:layout_width="150dp"
            android:layout_height="wrap_content" /></LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/badIDicon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/id"/>
        <TextView
            android:id="@+id/badID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/applyerID"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="18sp"/>
        <EditText
            android:id="@+id/edbadID"
            android:layout_width="150dp"
            android:layout_height="wrap_content" /></LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/badnumicon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/num"/>
        <TextView
            android:id="@+id/badNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/applyNum"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="18sp"/>
        <EditText
            android:id="@+id/edbadNum"
            android:layout_width="150dp"
            android:layout_height="wrap_content" /></LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/badtimeicon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/time"/>

        <TextView
            android:id="@+id/badTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/applyTime"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/showbadTime"
            android:layout_width="300dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="15sp"/>
        </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/badfieldicon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/yumaoqiu"/>
        <TextView
            android:id="@+id/badfieldID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fieldId"
            android:layout_gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/showbadfieldID"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="18sp"/></LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="right">

        <Button
            android:id="@+id/badmintonOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pay" />
    </LinearLayout>


</LinearLayout>
</FrameLayout>